# gomodules-zenithplanner

./: .gitignore  MODULE.bazel  NOTICE  README.md  compose.dev.yml  docker-compose.yml  go.mod  go.sum
cmd/backend/: BUILD.bazel  main.go
cmd/oauthcli/: BUILD.bazel  main.go
dashboard/: README.md  template.json
database/: schema.sql
docs/: development.md  llm_usage.md  release.md  roadmap.md
docs/img/: compress_image.bash
docs/project_plan/: README.md  detailed_code_flows.md  functional_requirements.md  glossary.md  technical_architecture_summary.md  technical_considerations.md
examples/: .env.example  compose.yml
internal/calendar/: BUILD.bazel  client.go  event_parsing.go  properties.go  types.go
internal/config/: BUILD.bazel  config.go
internal/database/: BUILD.bazel  calendar_event_cache.go  date_utils.go  db.go  schedule_entries.go  sync_state.go
internal/email/: BUILD.bazel  smtp_client.go  template.go
internal/handler/: BUILD.bazel  webhook.go
internal/scheduler/: BUILD.bazel  scheduler.go
internal/sync/: BUILD.bazel  full.go  incremental.go  reconciliation.go  sync.go  tasks.go  utils.go
