module(
    name = "zenithplanner",
    version = "0.1.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "rules_multirun", version = "0.12.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "gazelle", version = "0.43.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_uuid", "com_github_jackc_pgx_v5", "com_github_joho_godotenv", "com_github_robfig_cron_v3", "in_gopkg_gomail_v2", "org_golang_google_api", "org_golang_x_oauth2")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:fa5f94fa433728f8df3f63363ffc8dec4adcfb57e4d8c18b44bceccfea095ebc",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8")
